docs: deps.edn breakdown + complete (untruncated) examples
- README: grain-style deps.edn section — pinned grain/orc SHAs, a "critical
  base" block, event-store options (in-memory/sqlite/postgres), à la carte grain
  packages, and notes on the orc bundle + slim orc-service option.
- Replace truncated snippets with complete, runnable examples; document the
  verified cross-vendor draft→polish workflow (gemini-3-flash-preview → gpt-4o-mini
  over one OpenRouter key) and the repl-researcher main/sub-model split.
- orc-guide.md: same de-truncation pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>